<resources>
    <string name="app_name">HotelBookingApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_cart">Cart</string>
    <string name="title_account">Account</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_account">Account</string>
    <string name="menu_search">Search</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">1097629924798297</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1097629924798297</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome_text">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_aut">AutActivity</string>
    <string name="checkin_date_btn">Checkin date</string>
    <string name="welcome_authentication_text">Welcome to My Hotel</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="sign_in_with_google_text">Sign In with Google</string>
    <string name="search_rooms_text">Search Rooms</string>
    <string name="checkout_date_text">Checkout date</string>
    <string name="search_button_text">Search button</string>
    <string name="search_text">Search</string>
    <string name="royal_rooms_text">Royal Rooms</string>
    <string name="luxury_rooms_text">Luxury Rooms</string>
    <string name="image_room_text">Image room</string>
    <string name="_10_off_text">10% OFF</string>
    <string name="rating_5_text">Rating: 5</string>
    <string name="luxury_room_text">Luxury Room</string>
    <string name="_100_per_night_text">100$ / night</string>
    <string name="account_and_security_text">Account and security</string>
    <string name="settings_text">Settings</string>
    <string name="item_title">Item Title</string>
    <string name="string_account">Account</string>
    <string name="my_reviews">My reviews</string>
    <string name="language">language</string>
    <string name="select_language">Select Language</string>
    <string name="title_activity_show_image">ShowImageActivity</string>
    <string name="google_map_api_key">AIzaSyCjZFIOYN3k8GCE15TMUN4c_lU_LCOwpcY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>

</resources>