<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.xinchaongaymoi.hotelbookingapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.xinchaongaymoi.hotelbookingapp.ui.cart.CartFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.xinchaongaymoi.hotelbookingapp.ui.search.SearchFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.xinchaongaymoi.hotelbookingapp.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_search" />
</navigation>